fixing the thread ,and the finished product bugs